# cream

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  link.sh
cream.js/: Cargo.toml  README.md  log.txt
cream.js/src/: at_gen_id.rs  compiler.rs  component.rs  config.rs  get_prop.rs  id_gen.rs  import_lib.rs  input.rs  main.rs  new.rs  scope.rs  serve.rs  sys_exec.rs  template.rs
ex/src/: app.js  app.nts  hello.js
ext/: html_attr_dom_prop_map.json
lib/: camel.js  context.js  utilQuery.js  utilRandomNumber.js  utilUUID.js
lib/js/: context.js
lib/ts/: context.ts  utilRandomNumber.ts  utilUUID.ts
libs/: UUID.js  UUID.ts  camel.js  camel.ts  element.js  entangle.js  entangle.ts  enum.js  get_by_name.js  get_by_name.ts  http_client.js  http_client.ts  id_gen.js  id_gen.ts  make_string.js  make_string.ts  map_concat.js  map_concat.ts  params.js  params.ts  particle.js  particle.ts  router.ts  workset.js  workset.ts
my+project/src/: app.js  hello.js  hello_.js
node/src/: app.js
prac/lib/: utilRandomNumber.js
prac/src/: app.js  cont.js  mansa.js
scripts/: private_work_lib.js  router.js  router.ts
serve/: main.go
src/: at_gen_id.rs  at_html.rs  at_temp.rs  brace_pool.rs  browser_.rs  channel.rs  collect_gen.rs  collect_scope.rs  comment.rs  compiler.rs  compiler_enum.rs  component.rs  component_args.rs  component_map.rs  component_markup.rs  config.rs  consts.rs  copy_dir.rs  cpu_error.rs  cream_io.rs  create_project.rs  dsp_map.rs  dsp_parser.rs  escape_string.rs  expected.rs  extract_component.rs  gen_id.rs  get_prop.rs  helpers.rs  id_gen.rs  import_base.rs  import_component.rs  import_ext.rs  import_html.rs  import_lib.rs  import_npm.rs  import_script.rs  import_template.rs  input.rs  is_byte_in_str.rs  (+37 more)
src/helpers/: add_line.rs  build_source.rs  clone_range.rs  component_part.rs  create_file.rs  dependancy_graph.rs  dnl.rs  expected.rs  find_all.rs  find_all_by_char.rs  find_component.rs  format_colored.rs  html_atrribute_dom_prop_map.rs  imp_sign.rs  interpolate_string.rs  is_in_temp.rs  (+12 more)
(+16 files in other folders)
