[package]
name = "cream"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.104"
tinyget = { version = "1.0.2", features = ["https"] }
httparse = "1.8.0"
roxmltree = "0.21.1"
rand = "0.10.1"
oxc_transformer = "0.136.0" 
oxc_diagnostics = "0.136.0"
oxc_allocator = "0.136.0"
oxc_minifier = "0.136.0"
oxc_semantic = "0.136.0"
oxc_codegen = "0.136.0"
oxc_parser = "0.136.0"
oxc_span = "0.136.0"
oxc_ast = "0.136.0"


[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
lto = true
