[package]
name = "cream-js"
version = "0.1.2"
edition = "2024"
license = "MIT"

description = "A lightweight compiler for modern web applications."
repository = "https://github.com/tm-ahad/cream"
readme = "README.md"
documentation = "https://tm-ahad.github.io/cream_docs"

[[bin]]
name = "cream"
path = "src/main.rs"

[dependencies]
roxmltree = "0.21.1"
rand = "0.10.1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
tinyget = { version = "1.0.2", features = ["https"] }
serde_json = "1.0.150"
oxc_transformer = "0.137.0"
oxc_diagnostics = "0.137.0"
oxc_allocator = "0.137.0"
oxc_minifier = "0.137.0"
oxc_semantic = "0.137.0"
oxc_codegen = "0.137.0"
oxc_parser = "0.137.0"
oxc_span = "0.137.0"
oxc_ast = "0.137.0"
toml = "1.1.2"
notify = "8"

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
lto = true
